--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "author": "jxxghp & moded by lesiwo",
     "level": 1,
     "v2": true,
+    "release": true,
     "history": {
       "v1.1": "test"
     }
